# Linux_DeviceService

./: .tags  .tags_sorted_by_file  AC_DeviceService.c  Makefile  Makefile.am  Makefile.in  aclocal.m4  build.sh  config.status  configure  curl-config  libcurl.pc  libtool
docs/examples/: .gitignore.bak  .tags  .tags_sorted_by_file  1.c  @%  AC_DeviceService  AC_DeviceService.c  Makefile  Makefile (copy).am  Makefile.am~  Makefile.bak  Makefile.in  Makefile~  base64.c  build.sh  cJSON.c  config.h  config.h.in  config.h.in~  config.status  configure  configure.in  htmltitle.cpp  https.c~  localtest.c  makefile.am  makefile.am.bak  rsa.c  sha1.c
docs/examples/.deps/: 10-at-a-time.Po  AC_DeviceService.Po  HTTPClient.Po  HTTPClientAuth.Po  HTTPClientString.Po  HTTPClientWrapper.Po  anyauthput.Po  b64.Po  base.Po  base_io.Po  bignum.Po  cJSON.Po  conf.Po  cookie_interface.Po  debug.Po  fileupload.Po  fopen.Po  ftpget.Po  ftpgetresp.Po  ftpupload.Po  getinfo.Po  getinmemory.Po  http-post.Po  http.Po  https.Po  io.Po  md.Po  md_wrap.Po  rsa.Po  sha1.Po  urlsafe_b64.Po
docs/examples/.libs/: AC_DeviceService  lt-AC_DeviceService
docs/examples/autom4te.cache/: output.0  output.2  requests  traces.0  traces.1  traces.2
docs/examples/b64/: b64.c  urlsafe_b64.c
docs/examples/httpclient/: .tags  .tags_sorted_by_file
docs/examples/include/: .tags  AC_CFG.h  AC_DeviceService.h  Makefile  Makefile.in
docs/examples/lib/: Makefile  curl_config.h.in  libcurl_la-amigaos.lo  libcurl_la-asyn-thread.lo  libcurl_la-axtls.lo  libcurl_la-conncache.lo  libcurl_la-connect.lo  (+61 more)
src/: .tags  (+4 more)
(+259 files in other folders)
